# schemweave

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.agent/: Repo.md
.github/workflows/: ci.yml
crates/schematic-layout/: Cargo.toml
crates/schematic-layout-wasm/: Cargo.toml
crates/schematic-layout-wasm/src/: lib.rs
crates/schematic-layout/src/: lib.rs  routing.rs  validation.rs
crates/schematic-layout/tests/: layout.rs
crates/schemweave/: Cargo.toml
crates/schemweave-eval/: Cargo.toml
crates/schemweave-eval/src/: lib.rs
crates/schemweave-eval/tests/: scorer.rs
crates/schemweave-eval/tests/fixtures/: demand_aware_priority.json  synth_priority_encoder_case.json
crates/schemweave-wasm/: Cargo.toml
crates/schemweave-wasm/src/: lib.rs
crates/schemweave/benches/: layout.rs
crates/schemweave/benches/support/: generators.rs
crates/schemweave/src/: boundary_bundles.rs  incremental.rs  lib.rs  placement.rs  readability.rs  routing.rs  topology.rs  validation.rs
crates/schemweave/tests/: bench_fixtures.rs  incremental_corpus.rs  layout.rs  score_equivalence.rs
crates/schemweave/tests/fixtures/: consumer_pipe_middle_group_collapse.json  consumer_reg_mux_focused_register_expansion.json  consumer_reg_mux_mux_expansion.json  consumer_reg_mux_register_expansion.json
crates/schemweave/tests/support/: active_fanout.rs  digest.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  EVALUATION.md  USAGE.md
tools/visual-review/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/visual-review/scripts/: browser-smoke.mjs  build-wasm.mjs
tools/visual-review/src/: canvasView.test.ts  canvasView.ts  dataset.test.ts  dataset.ts  datasetCache.test.ts  datasetCache.ts  graph.test.ts  graph.ts  latestRequest.test.ts  latestRequest.ts  layout.worker.ts  layoutControls.test.ts  layoutControls.ts  layoutStaging.test.ts  layoutStaging.ts  main.ts  style.css  types.ts
tools/visual-review/wasm/: Cargo.toml
tools/visual-review/wasm/src/: lib.rs
