[workspace]
members = ["crates/schemweave", "crates/schemweave-eval", "crates/schemweave-wasm"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cachanova/schemweave"
rust-version = "1.97"

[workspace.dependencies]
schemweave = { path = "crates/schemweave" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "=0.2.122"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
