[package]
name = "schematic-layout-wasm"
description = "WebAssembly bindings for schematic-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schematic-layout.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
