[package]
name = "schemweave-wasm"
description = "WebAssembly bindings for SchemWeave"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
schemweave.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
